2022.8.0
- #87 Update legal sources for Turkish holidays

2022.7.0
-     Restructured package
- #85 Error in locale en-GB, year 2022
      (Thanks to Richard Fieldsend)
- #80 Add locale en-ZA
      (Thanks to girtu)
- #83 Update non-working days for 2022 in locale hu-HU
- #81 Add locale et-EE
      (Thanks to h0adp0re)
- #78 Add locale for sl-SI
      (Thanks to Dejan Dezman)
- #21 Update locale for pt-BR
      (Thanks to Adriano Correa)
- #58 Update locale for es-ES
      (Thanks to Vicente Jimenez Aguilar)
- #59 Add locale for hu-HU
      (Thanks to David Hanak)
- #60 Add locale for tr-TR
      (Thanks to farukara)
- #55 Fixed: Wrong assignment of flag `N` in locales en-US and es-US
- #54 Fixed: Wrong assignment of flag `N` in locale de-CH
- #53 Fixed: Regional holidays marked as national in locale de-DE
- #52 Fixed: Non-regional holidays not marked as national in locale nl-NL
- #51 Fixed: Regional holidays marked as national in locale de-AT
- #19 Add locale for sv-SE
      (Thanks to Martijn van der Ven)
- #49 Add additional office holidays for en-US/es-US
      (Thanks to Brian Burnett)
- #13 Add locale for es-CO
      (Thanks to Jorge E. Gómez)
- #44 Add locale fr-CA
      (Thanks to Ghyslain Leclerc)
- #29 Add locale en-CA
      (Thanks to Ghyslain Leclerc)
-     Add locale sv-FI
- #30 Add locale fi-FI
      (Thanks to Antti Heinonen)
- #22 Add locale pl-PL
      (Thanks to sebacyp)
- #10 Add locale cs-CZ
      (Thanks to Jakub Pavlík)
- #40 Add missing holidays in locale de-DE for region BE
- #38 Update croatian holidays according to the law valid for the year 2020 and onwards
      (Thanks to Saša Janiška)
- #32 Make project python only
- #25 Add locale for is-IS
      (Thanks to Matt Riggott)
- #33 Add locale for pt-PT
      (Thanks to lldh)
-     Add locale it-IT
-     Add locale fr-FR
-     Add locale el-GR
-     Add locale nl-NL
-     Add locale en-NZ
-     Add locale es-ES
-     Add locale ru-RU
-     Add XML emitter
-     Add YAML emitter