@@ -1,0 +1,8 @@
+from .holidays import Country
+
+
+class AT(Country):
+    id = "AT"
+    languages = ["de"]
+    default_lang = "de"
+    regions = ["1", "2", "3", "4", "5", "6", "7", "8", "9"]
