@@ -1,0 +1,6 @@
+from .holidays import Country
+
+
+class BE(Country):
+    id = "BE"
+    languages = ["de", "fr", "nl"]
