@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class CA(Country):
+    id = "CA"
+    languages = ["en", "fr"]
+    regions = ["AB", "BC", "MB", "NB", "NL", "NS", "ON", "PE", "QC", "SK", "NT", "NU", "YT"]
