@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class CO(Country):
+    id = "CO"
+    languages = ["es"]
+    default_lang = "es"
