@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class CZ(Country):
+    id = "CZ"
+    languages = ["cs"]
+    default_lang = "cs"
