@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class DK(Country):
+    id = "DK"
+    languages = ["da"]
+    default_lang = "da"
