@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class EE(Country):
+    id = "EE"
+    languages = ["et"]
+    default_lang = "et"
