@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class ES(Country):
+    id = "ES"
+    languages = ["es"]
+    default_lang = "es"
