@@ -1,0 +1,6 @@
+from .holidays import Country
+
+
+class FI(Country):
+    id = "FI"
+    languages = ["fi", "sv"]
