@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class FR(Country):
+    id = "FR"
+    languages = ["fr"]
+    default_lang = "fr"
