@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class GB(Country):
+    id = "GB"
+    languages = ["en"]
+    default_lang = "en"
