@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class GR(Country):
+    id = "GR"
+    languages = ["el"]
+    default_lang = "el"
