@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class HR(Country):
+    id = "HR"
+    languages = ["hr"]
+    default_lang = "hr"
