@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class HU(Country):
+    id = "HU"
+    languages = ["hu"]
+    default_lang = "hu"
