@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class IS(Country):
+    id = "IS"
+    languages = ["is"]
+    default_lang = "is"
