@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class IT(Country):
+    id = "IT"
+    languages = ["it"]
+    default_lang = "it"
