@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class NL(Country):
+    id = "NL"
+    languages = ["nl"]
+    default_lang = "nl"
