@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class NO(Country):
+    id = "NO"
+    languages = "nb"
+    default_lang = "nb"
