@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class NZ(Country):
+    id = "NZ"
+    languages = ["en"]
+    default_lang = "en"
