@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class PL(Country):
+    id = "PL"
+    languages = ["pl"]
+    default_lang = "pl"
