@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class PT(Country):
+    id = "PT"
+    languages = ["pt"]
+    default_lang = "pt"
