@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class RU(Country):
+    id = "RU"
+    languages = ["ru"]
+    default_lang = "ru"
