@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class SE(Country):
+    id = "SE"
+    languages = ["sv"]
+    default_lang = "sv"
