@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class SI(Country):
+    id = "SI"
+    languages = ["sl"]
+    default_lang = "sl"
