@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class SK(Country):
+    id = "SK"
+    languages = ["sk"]
+    default_lang = "sk"
