@@ -1,0 +1,7 @@
+from .holidays import Country
+
+
+class TR(Country):
+    id = "TR"
+    languages = ["tr"]
+    default_lang = "tr"
