@@ -1,0 +1,6 @@
+from .holidays import Country
+
+
+class ZA(Country):
+    id = "ZA"
+    languages = ["en"]
