@@ -1,6 +1,40 @@
-from .holidays import Locale
+from .holidays import Locale, Country
 
 __all__ = [
+    "Country",
+    "AT",
+    "BE",
+    "BR",
+    "CA",
+    "CA",
+    "CH",
+    "CO",
+    "CZ",
+    "DE",
+    "DK",
+    "EE",
+    "ES",
+    "FI",
+    "FI",
+    "FR",
+    "GB",
+    "GR",
+    "HR",
+    "HU",
+    "IS",
+    "IT",
+    "NL",
+    "NO",
+    "NZ",
+    "PL",
+    "PT",
+    "RU",
+    "SE",
+    "SI",
+    "SK",
+    "TR",
+    "US",
+    "ZA",
     "Locale",
     "cs-CZ",
     "da-DK",
