@@ -1,3 +1,5 @@
+-    Add ability to specify a locale via country and language
+
 2022.8.0
 - #87 Update legal sources for Turkish holidays
 
